package com.example.Concurrente2.Repository;

import com.example.Concurrente2.Entity.Datos;
import org.springframework.data.jpa.repository.JpaRepository;

public interface DatosRepository extends JpaRepository<Datos, Long> {
}
